--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nrfmicro_13_52833
-    shield: splitkb_aurora_sofle_left
+    shield: sofle_left
   - board: nrfmicro_13_52833
-    shield: splitkb_aurora_sofle_right
+    shield: sofle_right
